Backpack now correctly shows what you have, how many of them and a short description of the item once you click them

--- a/index.html
+++ b/index.html
@@ -3644,7 +3644,7 @@ CHANGES BY Forget_About_Me
         </div>
         <div id="textsp">
             <p class="title">Melissa Explains it All </p>
-            <p style="text-align: center; padding-right: 10%;">This game contains mature content.</p>
+            <p style="text-align: center">This game contains mature content.</p>
             <!--            TODO change class-->
             <ul id="choices" class="choices-start">
                 <li class="choices-items-start"><a href='javascript:go("start")'>Continue</a></li>
