Created a rough outline how items that can be used to pee in can be used, and created an example with champagne glass

--- a/index.html
+++ b/index.html
@@ -3627,6 +3627,7 @@ CHANGES BY Forget_About_Me
             <ul id="choices" class="choices-start">
                 <li class="choices-items-start"><a href='javascript:go("start")'>Continue</a></li>
                 <li class="choices-items-start"><a href='javascript:go("under18")'>Leave</a></li>
+                <li class="choices-items-start"><a href='javascript:Object.keys(objects).forEach(key => objects[key].value = 2);'>All Items</a></li>
             </ul>
             <pre style="padding-top: 10vh;padding-left:30vw;"><br>  ((<br>  -))<br>  /\) <br> ( |)<br>   \ \<br>   _/ )<br>  //-/<br>  ||<br>  d/<br></pre>
         </div>
