Added ypeein for champagne glass. Also created framework on how locations will be handled.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!--suppress XmlHighlighting -->
 <html lang="en">
 <head>
+<!--    TODO fix this obsolete attribute, i.e. move this to the css file-->
     <style type="text/css">
         body {
             font-family: sans-serif;
@@ -30,6 +31,7 @@
     <script src="scripts/clothes.js"></script>
     <script src="scripts/herhome.js"></script>
     <script src="scripts/drive.js"></script>
+    <script src="scripts/locations.js" type="module"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Melissa Explains it All</title>
 </head>
