--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <script src="scripts/clothes.js"></script>
     <script src="scripts/herhome.js"></script>
     <script src="scripts/drive.js"></script>
-    <script src="scripts/locations.js" type="module"></script>
+    <script src="scripts/locations.js"></script>
+    <script src="scripts/locations/driveAround.js"></script>
+    <script src="scripts/locations/theBar.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Melissa Explains it All</title>
 </head>
