fixed the listeners to deal with ticks, (calling go). Added keys to backpack. Started on the bar scene

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <script src="scripts/clothes.js"></script>
     <script src="scripts/herhome.js"></script>
     <script src="scripts/drive.js"></script>
-    <script src="scripts/locations.js"></script>
     <script src="scripts/locations/driveAround.js"></script>
     <script src="scripts/locations/theBar.js"></script>
+    <script src="scripts/locations.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Melissa Explains it All</title>
 </head>
@@ -172,7 +172,7 @@ CHANGES BY Forget_About_Me
 *You can now keep buying drinks in a row.
 
 ========
-5.0
+0.5.0
 
 *Moving quotes to JSON
 *Settings are now saved between sessions
@@ -184,6 +184,11 @@ CHANGES BY Forget_About_Me
 *Fixed preventpee being called if she doesn't have to go during pickup
 *Fixed that you and her use the same counter for a locked bathroom
 *Changed volume of water bottles and beer to 250ml to be slightly more realistic
+*Added option to turn off playerBladder
+*Added a backpack which works as an inventory
+*Removed debug mode
+*Added the option to always ask her to pee into something, without caring about her need
+*Added a gas station
 */
 
     //TODO potentially clean up if statements with multiple locations
