Continued on th drinking game

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ CHANGES BY Forget_About_Me
                 //TODO probably have a shyness/attraction check
                 s("You dash towards the urinal, already pulling your dick out of your boxers.");
                 s("You don't bother holding back a moan as your bladder finally empties.");
-                if(locstack[0]==="postgame") s("<em>Yes, you won the game. But it had been a close one.</em>");
+                if(loser === "her") s("<em>Yes, you won the game. But it had been a close one.</em>");
                 s("Suddenly the door to the men's room opens.");
                 s("Surprised you turn your head to see " + girlname + " entering the room with a sultry smile");
                 s("She moves over towards you and you can't help but jump a little as she grasps your still peeing dick");
