--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@ CHANGES BY Forget_About_Me
     * WaitCounter is only ignored if she's genuinely within 2 ticks of wetting
 *When selling panties you now get the option to buy more beer.
 *Added more topics for talking in the bar.
+*Added a dart game
 */
 
     //TODO potentially clean up if statements with multiple locations
@@ -596,39 +597,6 @@ CHANGES BY Forget_About_Me
             s(girltalk + "I feel <i>so</i> naughty!");
             poploc();
             kissher();
-        } else if (locstack[0] === "postgame" || locstack[0] === "postgamelose") {
-            if (notdesperate) {
-            s("She smiles at you as she moves back to her own chair.");
-            poploc();
-            c(locstack[0], "Continue...");
-            } else if(notydesperate){
-                //TODO move back to her own chair
-                s("When she finally emerges from the bathroom she sits down in your lap.");
-                s("She kissed you soundly, before whispering in your ear: <strong>I feel <i>so</i> naughty!</strong>");
-                poploc();
-                attraction += 5;
-                shyness -= 7;
-                c(locstack[0], "Continue...");
-            } else if(nothdesperate){
-                //TODO probably have a shyness/attraction check
-                s("You dash towards the urinal, already pulling your dick out of your boxers.");
-                s("You don't bother holding back a moan as your bladder finally empties.");
-                if(loser === "her") s("<em>Yes, you won the game. But it had been a close one.</em>");
-                s("Suddenly the door to the men's room opens.");
-                s("Surprised you turn your head to see " + girlname + " entering the room with a sultry smile");
-                s("She moves over towards you and you can't help but jump a little as she grasps your still peeing dick");
-                s("She captures your lips before whispering: <strong>That was really hot!</strong>");
-                poploc();
-                attraction += 10;
-                shyness -= 10;
-                c(locstack[0], "Continue...");
-            }
-            else{
-                s("You emerge from the restroom first, then " + girlname + " comes back, looking a little damp and very aroused.");
-                s(girltalk + "I feel <i>so</i> naughty!");
-                poploc();
-                kissher();
-            }
         } else if (locstack[0] === "thehottub") {
             s("You take " + girlname + "'s hand and help her out of the hot tub, admiring the view in the dim starlight.");
             s("You can't help staring as she dries off as best she can and dresses beside you in the warm evening air.");
