the statusbar now just flashes temporary when an attribute changes instead of until the next button is pressed The flashing of the statusbar now differentiates between positive(green) and negative(red) changed

--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@ CHANGES BY Forget_About_Me
 *Added more topics for talking in the bar.
 *Added dart game
 *There can now be a line for the bathroom in the theatre
+*the statusbar now just flashes temporary when an attribute changes instead of until the next button is pressed
+*The flashing of the statusbar now differentiates between positive(green) and negative(red) changed
 */
 
     //TODO potentially clean up if statements with multiple locations
