replaced style.css with stylechange.css Moved movie quotes to theatre.JSON

--- a/index.html
+++ b/index.html
@@ -2385,7 +2385,7 @@ CHANGES BY Forget_About_Me
 
 </script>
 <!--TODO fix text flicker when start is loaded with picture-->
-<link rel="stylesheet" type="text/css" href="unused/stylechange.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <div class="fullscreen">
     <div id="backpack-cnt">
         <div id="backpackcontent">
