Continued working on refactoring the theatre

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ CHANGES BY Forget_About_Me
     let showedneed = 0; // has she just visually displayed her need
     let changevenueflag = 0; // you are changing venue - makes her easily ask to pee.
     let moviecounter = 0; // Keep track of location in movie
-    let moviechoice = 0; //  Which movie are we showing
+    let moviechoice; //  Which movie are we showing
     let askedfavourite = 0; //asked her which movie to watch
 
     let askholditcounter = 0; // How many times have you asked her to hold it.
